Improve uninstall mod icon & layout (#128)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -253,6 +253,9 @@ dd::after {
   font-size: 13px;
   vertical-align: middle;
 }
+.item-control[data-action="uninstallMod"] {
+  vertical-align: bottom;
+}
 .item-control h2 {
   font-size: 13px;
 }
