--- a/templates/item/item-mods.hbs
+++ b/templates/item/item-mods.hbs
@@ -15,7 +15,7 @@
 	        <th style="width: 24px;"></th>
 
 	        <th style="text-align: left; padding-left: 3px;">{{ localize 'shadowrun6.label.column.name' }}</th>
-	        <th style="width: 25%">{{ localize 'SR6.Common.FIELDS.type.label' }}</th>
+	        <th style="width: 20%">{{ localize 'SR6.Common.FIELDS.type.label' }}</th>
 
 	        <th style="width: 100px">{{ localize 'shadowrun6.label.column.action' }}</th>
 	      </tr>
@@ -36,10 +36,10 @@
 			</td>
 
 			<td style="height: 20px;"> <span class="draggable" data-uuid="{{item.uuid}}">{{item.name}}</span></td>
-			<td class="centered">{{localize (lookup item.system.schema.fields.type.choices item.system.type )}}</td>
+			<td class="centered" style="white-space: nowrap;">{{localize (lookup item.system.schema.fields.type.choices item.system.type )}}</td>
 
 			<td class="centered">
-                <a class="item-control" data-action="uninstallMod" title="{{localize 'SR6.Item.mod.label.uninstall' }}"><i class="fas fa-toggle-on"></i></a>
+                <a class="item-control" data-action="uninstallMod" title="{{localize 'SR6.Item.mod.label.uninstall' }}"><i class="fas fa-folder-minus"></i></a>
 				<a class="item-control item-edit" title="{{localize 'shadowrun6.label.edit' }}"><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title="{{localize 'shadowrun6.label.delete' }}"><i class="fas fa-trash"></i></a>
 			</td>
