--- a/templates/item/shadowrun6-mod-sheet.html
+++ b/templates/item/shadowrun6-mod-sheet.html
@@ -23,7 +23,7 @@
                         {{#if item.system.installedIn}}
                         <div class="item" data-item-id="{{item.id}}">
                             {{item.system.installedIn.name}}
-                            <a class="item-control" data-action="uninstallMod" title="{{localize 'SR6.Item.mod.label.uninstall' }}"><i class="fas fa-toggle-on"></i></a>
+                            <a class="item-control" data-action="uninstallMod" title="{{localize 'SR6.Item.mod.label.uninstall' }}"><i class="fas fa-folder-minus"></i></a>
                             <span class="item" data-item-id="{{item.system.installedIn.id}}"><a class="item-control item-edit" title="{{localize 'shadowrun6.label.edit' }}"><i class="fas fa-edit"></i></a></span>
                         </div>
                         {{else}}
