--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -52,14 +52,14 @@
                     <th colspan="5">{{localize 'shadowrun6.item.attackvalues'}}</th>
                     <!-- <th>{{localize 'shadowrun6.item.ammunition'}}</th> -->
                 </tr>
-                {{log "shadowrun6-gear-sheet.html this=" item.system}}
+                {{log "shadowrun6-gear-sheet.html item=" item}}
                 <tr>
                     <td style="text-align: right">
-                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width: 2.5em;" />
+                        <input name="dmg" type="number" value="{{item._source.system.dmg}}" data-field="system.dmg" class="box centered" style="width: 2.5em;" />
                     </td>
                     <td style="text-align: left">
                         <select name="gearStun" data-field="system.stun">
-                            {{selectOptions config.WEAPON_STUN_OPTION selected=item.system.stun localize=true}}
+                            {{selectOptions config.WEAPON_STUN_OPTION selected=item._source.system.stun localize=true}}
                         </select>
                     </td>
                     {{#if (or (or (eq item.system.type "WEAPON_FIREARMS")(eq item.system.type "WEAPON_RANGED"))(eq item.system.type "WEAPON_SPECIAL"))}}
@@ -81,7 +81,7 @@
                     </td>
                     {{/if}}
 
-                    {{#each item.system.attackRating as |arating id|}}
+                    {{#each item._source.system.attackRating as |arating id|}}
                     <td style="text-align: center" data-array="system.attackRating">
                         <input name="attackRating{{id}}" type="number" value="{{arating}}" data-array-field data-index="{{id}}" style="width:2em" class="centered box" title="{{localize (concat "shadowrun6.roll.ar_" id "_hint")}}"/>
                     </td>
@@ -163,13 +163,13 @@
                 </tr>
                 <tr>
                     <td class="centered">
-                        <input name="defense" type="number" value="{{item.system.defense}}" data-field="system.defense" class="box centered" style="width: 3em" />
+                        <input name="defense" type="number" value="{{item._source.system.defense}}" data-field="system.defense" class="box centered" style="width: 3em" />
                     </td>
                     <td class="centered">
                         <input name="capacity" type="number" value="{{item.system.capacity}}" data-field="system.capacity" class="box centered" style="width: 3em" />
                     </td>
                     <td class="centered">
-                        <input name="social" type="number" value="{{item.system.social}}" data-field="system.social" class="box centered" style="width: 3em" />
+                        <input name="social" type="number" value="{{item._source.system.social}}" data-field="system.social" class="box centered" style="width: 3em" />
                     </td>
                     <td class="centered">
                         <input name="natural" type="checkbox" {{checked item.system.natural}} data-field="system.natural" />
