Add localizations for the titles of Creating New Effect (#143)

--- a/templates/parts/tab-effects.hbs
+++ b/templates/parts/tab-effects.hbs
@@ -32,10 +32,10 @@
                 data-duration.rounds="1"
               {{/if}}
               data-origin="{{@root.actor.uuid}}"
-              title='{{localize "DOCUMENT.Create" type='Effect'}}'
+              title='{{localize 'shadowrun6.effect.Create' }}'
             >
               <i class='fas fa-plus'></i>
-              {{localize 'DOCUMENT.New' type='Effect'}}
+              {{localize 'shadowrun6.effect.New'}}
             </a>
           </div>
         </li>
