--- a/templates/item/item-effects.hbs
+++ b/templates/item/item-effects.hbs
@@ -25,10 +25,10 @@
               {{else if (eq section.type "temporary")}}
                 data-duration.rounds="1"
               {{/if}}
-              title='{{localize "DOCUMENT.Create" type='Effect'}}'
+              title='{{localize 'shadowrun6.effect.Create' }}'
             >
               <i class='fas fa-plus'></i>
-              {{localize 'DOCUMENT.New' type='Effect'}}
+              {{localize 'shadowrun6.effect.New' }}
             </a>
           </div>
         </li>
