v13 sidebar Folder name size to bold

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -642,3 +642,6 @@ body.game .app.shadowrun6 .tabs.sheet-tabs [data-tab] {
 .actor.sheet table th:first-child {
   text-align: left;;
 }
+li.folder > .folder-header .folder-name {
+  font-weight: 700;
+}
