Fix missing "Effect" and "Edit" localizations on item templates (#143)

--- a/templates/item/item-effects-ro.hbs
+++ b/templates/item/item-effects-ro.hbs
@@ -46,7 +46,7 @@
               </div>
               {{#iff ../../item.type '!=' "mod"}}
               <div class='effect-source'>
-                {{effect.sourceName}} {{#iff effect.parent.type '==' "mod"}}<a class="item-control item-edit" title="Edit"><i class="fas fa-edit"></i></a>{{/iff}}
+                {{effect.sourceName}} {{#iff effect.parent.type '==' "mod"}}<a class="item-control item-edit" title={{localize 'shadowrun6.label.edit' }}><i class="fas fa-edit"></i></a>{{/iff}}
                 </div>
               {{/iff}}
               <div class='effect-duration'>
@@ -65,7 +65,7 @@
                 </a>
                 <a
                   class='effect-control'
-                  title='{{localize "DOCUMENT.Update" type='Effect'}}'
+                  title='{{localize "DOCUMENT.Update" type=(localize "shadowrun6.effect.Label_one")}}'
                 >
                   <i class='fas fa-edit'></i>
                 </a>
@@ -73,7 +73,7 @@
                   {{#iff ../../item.type '==' "mod"}}
                   <a
                     class='effect-control'
-                    title='{{localize "DOCUMENT.Delete" type='Effect'}}'
+                    title='{{localize "DOCUMENT.Delete" type=(localize "shadowrun6.effect.Label_one")}}'
                   >
                     <i class='fas fa-trash'></i>
                   </a>
@@ -83,7 +83,7 @@
                 {{else}}
                   <a
                     class='effect-control'
-                    title='{{localize "DOCUMENT.Delete" type='Effect'}}'
+                    title='{{localize "DOCUMENT.Delete" type=(localize "shadowrun6.effect.Label_one")}}'
                   >
                     <i class='fas fa-trash'></i>
                   </a>
