--- a/templates/parts/tab-effects.hbs
+++ b/templates/parts/tab-effects.hbs
@@ -75,7 +75,7 @@
                 <a
                   class='effect-control'
                   data-action='viewDoc'
-                  title='{{localize "DOCUMENT.Update" type='Effect'}}'
+                  title='{{localize "DOCUMENT.Update" type=(localize "shadowrun6.effect.Label_one")}}'
                 >
                   <i class='fas fa-edit'></i>
                 </a>
@@ -83,7 +83,7 @@
                 <a
                   class='effect-control'
                   data-action='deleteDoc'
-                  title='{{localize "DOCUMENT.Delete" type='Effect'}}'
+                  title='{{localize "DOCUMENT.Delete" type=(localize "shadowrun6.effect.Label_one")}}'
                 >
                   <i class='fas fa-trash'></i>
                 </a>
