Change Gear Mods so they use relative id instead of uuid where needed to support Export/Import of characters (#100)(#128)

--- a/templates/item/item-mods.hbs
+++ b/templates/item/item-mods.hbs
@@ -24,7 +24,7 @@
 		{{#if item.actor}}
 		{{#each (sort item.actor.items) as |item id|}}
 		{{#iff item.type '==' 'mod'}}
-		{{#iff item.system.embeddedInUuid '==' ../item.uuid }}
+		{{#iff item.system.installedIn.id '==' ../item.id }}
 
 		<tr class="item list-item" data-item-id="{{item.id}}">
 			<td style="margin-right: 1rem; width: 0.7em;">
