--- a/templates/item/item-effects.hbs
+++ b/templates/item/item-effects.hbs
@@ -46,7 +46,12 @@
               </div>
               {{#iff ../../item.type '!=' "mod"}}
               <div class='effect-source'>
-                {{effect.sourceName}} {{#iff effect.parent.type '==' "mod"}}<a class="item-control item-edit" title={{localize 'shadowrun6.label.edit' }}><i class="fas fa-edit"></i></a>{{/iff}}
+                {{effect.sourceName}} 
+                {{#iff effect.parent.type '==' "mod"}}
+                <span class="item" data-item-id="{{effect.parent.id}}">
+                  <a class="item-control item-edit" title={{localize 'shadowrun6.label.edit' }}><i class="fas fa-edit"></i></a>
+                </span>
+                {{/iff}}
                 </div>
               {{/iff}}
               <div class='effect-duration'>
