--- a/templates/item/item-effects-ro.hbs
+++ b/templates/item/item-effects-ro.hbs
@@ -46,7 +46,7 @@
               </div>
               {{#iff ../../item.type '!=' "mod"}}
               <div class='effect-source'>
-                {{effect.sourceName}} {{#iff effect.parent.type '==' "mod"}}<a class="item-control item-edit" title={{localize 'shadowrun6.label.edit' }}><i class="fas fa-edit"></i></a>{{/iff}}
+                {{effect.system.sourceName}} {{#iff effect.parent.type '==' "mod"}}<a class="item-control item-edit" title={{localize 'shadowrun6.label.edit' }}><i class="fas fa-edit"></i></a>{{/iff}}
                 </div>
               {{/iff}}
               <div class='effect-duration'>
