Fix datatype of a text field on Vehicle sheet

--- a/templates/parts/vehicle-weapons.html
+++ b/templates/parts/vehicle-weapons.html
@@ -33,7 +33,7 @@
          <td colspan="6">
          	<div class="collapsible-content closed">
         	   {{ localize 'shadowrun6.label.modifications' }} 
-			   <textarea name="{{id}}Accessories" class="box" type="text"     data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 25em">{{item.system.accessories}}</textarea>
+			   <textarea name="{{id}}Accessories" class="box" type="text"     data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="text" style="width: 25em">{{item.system.accessories}}</textarea>
 			   <br/>
          	{{ localize 'shadowrun6.label.poolmod' }} <input name="vehicleWeaponMod{{id}}" class="centered box" type="text" data-item-id="{{this.id}}" data-field="system.modifier" type="text"     value="{{item.system.modifier}}" data-dtype="Number" style="width: 1.5em"/>
          	</div>
