Fix showing all weapons on NPC readonly sheets, and order them by weapon type

--- a/templates/parts/npc-gear.html
+++ b/templates/parts/npc-gear.html
@@ -7,6 +7,8 @@
          (and
             (ne item.system.type "WEAPON_FIREARMS")
             (ne item.system.type "WEAPON_CLOSE_COMBAT")
+            (ne item.system.type "WEAPON_RANGED")
+            (ne item.system.type "WEAPON_SPECIAL")
             (ne item.system.type "CYBERWARE")
             (ne item.system.type "BIOWARE")
          )
