--- a/templates/parts/npc_usage_sheet.html
+++ b/templates/parts/npc_usage_sheet.html
@@ -43,6 +43,7 @@
                         {{> "systems/shadowrun6-eden/templates/parts/npc-critterpowers.html" }}
                         {{> "systems/shadowrun6-eden/templates/parts/npc-weapons.html" }}
                     </dl>
+                    {{> "systems/shadowrun6-eden/templates/parts/npc-item-descriptions.html" }}
                 </div>
                 {{#if system.notes}}
                 <div class="section" style="width: 90%; margin: 5px">
