--- a/templates/parts/npc-augmentations.html
+++ b/templates/parts/npc-augmentations.html
@@ -1,14 +1,13 @@
 {{#if (itemTypeInList actor.items 'gear')}}
-<dt>{{ localize 'shadowrun6.section.bodyware.title' }}</dt>
-<dd>
-	<!-- Bioware -->
-	{{#each (itemsOfGeartype actor.items 'BIOWARE') as |item id|}} 
-		<label class="" data-gear="{{id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
-	{{/each}}
-
-	<!-- Cyberware -->
-	{{#each (itemsOfGeartype actor.items 'CYBERWARE') as |item id|}} 
-		<label class="" data-gear="{{id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
-	{{/each}}
-</dd>
+	<!-- Augmentations -->
+	{{#each (itemsOfAugSubtype actor.items) as |item id|}}
+      {{#if @first}}         
+      <dt>{{ localize 'shadowrun6.section.bodyware.title' }}</dt>
+      <dd>
+      {{/if}}
+      <label class="item-desc" data-item-id="{{item.id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
+      {{#if @last}}
+      </dd>
+      {{/if}}
+   {{/each}}
 {{/if}}
