--- a/templates/parts/npc-critterpowers.html
+++ b/templates/parts/npc-critterpowers.html
@@ -4,7 +4,7 @@
 	<!-- Powers -->
 	{{#each actor.items as |item id|}}
 	{{#iff item.type '==' 'critterpower'}}
-   <label class="" data-skill="{{id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
+   <label class="item-desc" data-item-id="{{item.id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
    {{/iff}}
    {{/each}}
 </dd>
