--- a/templates/parts/npc-gear.html
+++ b/templates/parts/npc-gear.html
@@ -1,20 +1,14 @@
 {{#if (itemTypeInList actor.items 'gear')}}
-<dt>{{ localize 'shadowrun6.section.gear.title' }}</dt>
-<dd>
 	<!-- Gear -->
-	{{#each (itemsOfType actor.items 'gear') as |item id|}}
-      {{#if
-         (and
-            (ne item.system.type "WEAPON_FIREARMS")
-            (ne item.system.type "WEAPON_CLOSE_COMBAT")
-            (ne item.system.type "WEAPON_RANGED")
-            (ne item.system.type "WEAPON_SPECIAL")
-            (ne item.system.type "CYBERWARE")
-            (ne item.system.type "BIOWARE")
-         )
-      }}
-         <label class="skill-key rollable spell-roll" data-skill="{{id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
+	{{#each (itemsOfGeartypeNoWeaponsOrAugs actor.items) as |item id|}}
+      {{#if @first}}         
+      <dt>{{ localize 'shadowrun6.section.gear.title' }}</dt>
+      <dd>
+      {{/if}}
+      <label class="item-desc" data-item-id="{{item.id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
+      {{#if @last}}
+      </dd>
       {{/if}}
    {{/each}}
-</dd>
+	<!-- /Gear -->
 {{/if}}
