--- a/templates/parts/npc-complex-forms.html
+++ b/templates/parts/npc-complex-forms.html
@@ -3,7 +3,8 @@
 <dd>
 	<!-- Complex forms -->
 	{{#each (itemsOfType actor.items 'complexform') as |item id|}} 
-      <label class="skill-key rollable spell-roll item-desc" data-skill="{{id}}" data-item-id="{{item.id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}
+      <label class="item-desc" data-skill="{{id}}" data-item-id="{{item.id}}">{{item.name}}</label>
+      <a class="item-control complexform-roll" data-item-id="{{item.id}}" data-uuid="{{item.uuid}}" title="Roll"><i class="fas fa-dice-six"></i></a>{{#unless @last}},&nbsp;{{/unless}}
    {{/each}}
 </dd>
 {{/if}}
