--- a/templates/parts/npc-metamagics.html
+++ b/templates/parts/npc-metamagics.html
@@ -3,7 +3,7 @@
 <dd>
 	<!-- Metamagic skills -->
 	{{#each (itemsOfType actor.items 'metamagic') as |item id|}} 
-      <label class="skill-key rollable spell-roll item-desc" data-skill="{{id}}" data-item-id="{{item.id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}  
+      <label class="item-desc"data-item-id="{{item.id}}">{{item.name}}</label>{{#unless @last}},&nbsp;{{/unless}}  
    {{/each}}
 </dd>
 {{/if}}
