--- a/templates/parts/npc-spells.html
+++ b/templates/parts/npc-spells.html
@@ -3,7 +3,7 @@
 <dd>
 	<!-- Spells skills -->
 	{{#each (itemsOfType actor.items 'spell') as |item id|}} 
-      <label class="skill-key rollable spell-roll" data-skill="{{id}}">{{item.name}}</label>
+      <label class="item-desc" data-item-id="{{item.id}}">{{item.name}}</label>
       <a class="item-control spell-roll"   data-item-id="{{item.id}}"  title="Roll"><i class="fas fa-dice-six"></i></a>{{#unless @last}},&nbsp;{{/unless}}
    {{/each}}
 </dd>
