Fix ComplexForms not shown on the NPC sheet

--- a/templates/parts/npc-complex-forms.html
+++ b/templates/parts/npc-complex-forms.html
@@ -1,4 +1,4 @@
-{{#if (itemTypeInList actor.items 'adeptpower')}}
+{{#if (itemTypeInList actor.items 'complexform')}}
 <dt>{{ localize 'shadowrun6.section.complexforms.title' }}</dt>
 <dd>
 	<!-- Complex forms -->
